fix: 修复BottomNavigation不显示图标

--- a/app/src/main/res/drawable/ic_farm_page.xml
+++ b/app/src/main/res/drawable/ic_farm_page.xml
@@ -4,19 +4,7 @@
     android:viewportWidth="28"
     android:viewportHeight="28">
   <path
-      android:pathData="M0,0h28v28h-28z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M12.531,21.048C10.782,21.325 8.804,21.39 6.602,21.399C6.625,18.772 6.847,15.257 8.654,12.314C10.516,9.284 14.143,6.739 21.397,6.605C21.315,13.767 19.778,17.361 17.305,19.229C16.022,20.198 14.433,20.746 12.531,21.048Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="#008C46"/>
-  <path
-      android:pathData="M6.889,21.111C8.666,16.667 12.222,13.111 16.667,11.333"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="#008C46"
-      android:strokeLineCap="round"/>
+      android:pathData="M6,22C6.406,22 6.806,21.999 7.2,21.995C16.028,21.913 21.676,20.661 21.986,7.2C21.995,6.81 22,6.41 22,6C21.59,6 21.19,6.007 20.8,6.022C7.405,6.518 6.126,15.376 6.011,20.8C6.002,21.223 6,21.625 6,22ZM9.166,12.628C10.843,9.897 14.106,7.483 20.786,7.223C20.624,13.905 19.12,17.106 16.944,18.75C15.767,19.639 14.283,20.162 12.437,20.455C11.018,20.68 9.435,20.763 7.675,20.789C9.457,16.752 12.781,13.534 16.889,11.89C17.197,11.767 17.347,11.418 17.224,11.111C17.101,10.803 16.751,10.653 16.444,10.776C12.561,12.329 9.335,15.193 7.318,18.816C7.504,16.773 7.977,14.563 9.166,12.628Z"
+      android:fillColor="#008C46"
+      android:fillType="evenOdd"/>
 </vector>
