--- a/app/src/main/res/drawable/ic_message_page_selected.xml
+++ b/app/src/main/res/drawable/ic_message_page_selected.xml
@@ -1,29 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="29dp"
+    android:width="28dp"
     android:height="28dp"
-    android:viewportWidth="29"
+    android:viewportWidth="28"
     android:viewportHeight="28">
-  <group>
-    <clip-path
-        android:pathData="M0.333,0h28v28h-28z"/>
-    <path
-        android:pathData="M10.333,2.75L18.333,2.75A7.25,7.25 0,0 1,25.583 10L25.583,18A7.25,7.25 0,0 1,18.333 25.25L10.333,25.25A7.25,7.25 0,0 1,3.083 18L3.083,10A7.25,7.25 0,0 1,10.333 2.75z"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1.5"
-        android:fillColor="#00000000"
-        android:strokeColor="#000000"
-        android:fillAlpha="0.2"/>
-    <path
-        android:pathData="M0,0h28v28h-28z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M15.388,5.779C15.388,4.799 14.543,4 13.5,4C12.459,4 11.612,4.797 11.612,5.779C11.612,5.879 11.621,5.978 11.637,6.074C9.029,6.929 6.888,9.558 6.888,12.667V15.114C6.888,15.114 6.888,18.638 5.969,18.67C5.42,18.67 5,19.067 5,19.558C5,20.051 5.423,20.446 5.944,20.446H21.056C21.58,20.446 22,20.049 22,19.558C22,19.063 21.577,18.67 21.056,18.67C20.112,18.67 20.112,15.138 20.112,15.138V12.665C20.112,9.554 18.111,6.924 15.363,6.069C15.379,5.975 15.388,5.877 15.388,5.779V5.779ZM16.333,21.333C16.33,22.808 15.074,24 13.5,24C11.938,24 10.67,22.81 10.667,21.333"
-        android:fillColor="#008C46"/>
-    <path
-        android:strokeWidth="1"
-        android:pathData="M12,9C11,9 9.5,10 9.5,12"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="round"/>
-  </group>
+  <path
+      android:pathData="M14.167,4C15.21,4 16.055,4.759 16.055,5.69C16.055,5.783 16.046,5.877 16.03,5.966C18.777,6.778 20.778,9.276 20.778,12.232V14.582C20.778,14.582 20.778,17.936 21.722,17.936C22.244,17.936 22.667,18.309 22.667,18.78C22.667,19.247 22.246,19.624 21.722,19.624H6.611C6.089,19.624 5.667,19.249 5.667,18.78C5.667,18.314 6.087,17.936 6.636,17.936C7.555,17.906 7.555,14.558 7.555,14.558V12.234C7.555,9.28 9.696,6.782 12.303,5.97C12.287,5.879 12.278,5.785 12.278,5.69C12.278,4.757 13.126,4 14.167,4ZM12.667,8.275C11.39,8.275 9.667,9.438 9.667,11.6C9.667,11.862 9.89,12.075 10.167,12.075C10.443,12.075 10.667,11.862 10.667,11.6C10.667,9.962 11.943,9.225 12.667,9.225C12.943,9.225 13.167,9.012 13.167,8.75C13.167,8.488 12.943,8.275 12.667,8.275Z"
+      android:fillColor="#008C46"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M14.167,23C15.74,23 16.997,21.868 16.999,20.466H11.334C11.336,21.87 12.604,23 14.167,23Z"
+      android:fillColor="#008C46"/>
 </vector>
