--- a/app/src/main/res/drawable/ic_farm_page_selected.xml
+++ b/app/src/main/res/drawable/ic_farm_page_selected.xml
@@ -4,19 +4,9 @@
     android:viewportWidth="28"
     android:viewportHeight="28">
   <path
-      android:pathData="M0,0h28v28h-28z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M15.912,20.32C12.93,22.426 9.017,22.746 5.031,22.772C4.469,19.923 4.616,15.965 6.71,12.66C8.851,9.282 13.132,6.425 21.244,6.258C21.111,14.193 18.887,18.219 15.912,20.32Z"
+      android:pathData="M15.605,10.331C10.384,12.069 6.965,15.875 4.751,19.985C4.724,17.477 5.301,14.646 6.995,12.224C9.218,9.045 13.472,6.417 21.244,6.258C21.114,13.987 18.995,18.001 16.134,20.14C13.413,22.174 9.866,22.644 6.177,22.733C8.161,18.369 11.349,14.382 16.395,12.702C17.05,12.484 17.405,11.776 17.186,11.121C16.967,10.466 16.259,10.113 15.605,10.331Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#008C46"
       android:strokeColor="#008C46"/>
-  <path
-      android:strokeWidth="1"
-      android:pathData="M4.5,23.5C6.5,18.5 10,13.524 16,11.524"
-      android:strokeLineJoin="round"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
 </vector>
