--- a/app/src/main/res/drawable/ic_mine_page_selected.xml
+++ b/app/src/main/res/drawable/ic_mine_page_selected.xml
@@ -4,27 +4,15 @@
     android:viewportWidth="28"
     android:viewportHeight="28">
   <path
-      android:pathData="M0,0h28v28h-28z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M10,6C10,4.895 10.895,4 12,4H16C17.105,4 18,4.895 18,6V9H10V6Z"
+      android:pathData="M12,4C10.895,4 10,4.895 10,6V6.268C7.609,6.613 6,7.26 6,8C6,8.741 7.613,9.388 10.009,9.734C10.003,9.822 10,9.911 10,10C10,12.209 11.791,14 14,14C16.209,14 18,12.209 18,10C18,9.911 17.997,9.822 17.991,9.734C20.387,9.388 22,8.741 22,8C22,7.26 20.391,6.613 18,6.268V6C18,4.895 17.105,4 16,4H12Z"
       android:fillColor="#008C46"/>
   <path
-      android:pathData="M6,8a8,2 0,1 0,16 0a8,2 0,1 0,-16 0z"
+      android:pathData="M11,15V19H17V15H11Z"
       android:fillColor="#008C46"/>
   <path
-      android:pathData="M14,10m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
+      android:pathData="M10,15.126C8.275,15.57 7,17.136 7,19V24L10,24V15.126Z"
       android:fillColor="#008C46"/>
   <path
-      android:pathData="M7,19C7,16.791 8.791,15 11,15H17C19.209,15 21,16.791 21,19V24H7V19Z"
+      android:pathData="M18,24V15.126C19.725,15.57 21,17.136 21,19V24L18,24Z"
       android:fillColor="#008C46"/>
-  <path
-      android:pathData="M10,19h8v5h-8z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M10,15h1v4h-1z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M17,15h1v4h-1z"
-      android:fillColor="#ffffff"/>
 </vector>
